crates/reap-pm-live/tests/ui/public_observed_event_cannot_enqueue_directly.rs
use reap_pm_core::ReceivedEventClock;
use reap_pm_live::{PmIngressOrder, PmLaneSet, PmObservedEvent};

fn bypass<E: PmObservedEvent>(
    event: E,
    lanes: &mut PmLaneSet,
    ingress: PmIngressOrder,
    clock: ReceivedEventClock,
) {
    <E as PmObservedEvent>::enqueue_into(event, lanes, ingress, clock).unwrap();
}

fn main() {}
